Align avatars correctly

--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,20 @@
 	padding-top: 3em !important;
 }
 
+.memberListButton span{
+	display: block;
+    box-shadow: 0px 0px 5px rgb(90, 90, 90) inset;
+    background-color: rgb(200, 200, 200);
+    border-radius: 5px;
+    border: 2px solid;
+    display: block;
+    margin: auto;
+}
+
+.memberListButton img{
+    border: 0 none !important;
+}
+
 #toolbar {
 	border-bottom: none !important;
 	padding: 6px 0 !important;
